--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '39 10 * * *'
+  # schedule:
+  #  - cron: '39 10 * * *'
   push:
     branches: [ main ]
     # Publish semver tags as releases.
